Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>
-<a name="connets-4-circuit" class="anchor" href="#connets-4-circuit"><span class="octicon octicon-link"></span></a>Connets 4 circuit</h1>
+<a name="connect-4-circuit" class="anchor" href="#connect-4-circuit"><span class="octicon octicon-link"></span></a>Connect 4 circuit</h1>
 
 <h2>
 <a name="idee" class="anchor" href="#idee"><span class="octicon octicon-link"></span></a>Idee</h2>
